Implement table selection listener Refactoring